--- a/src/main/resources/static/css/reset.css
+++ b/src/main/resources/static/css/reset.css
@@ -148,3 +148,9 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+.clearfix::after {
+    content: '';
+    display: block;
+    clear: both;
+}
