--- a/src/main/resources/static/css/weeklyMenu.css
+++ b/src/main/resources/static/css/weeklyMenu.css
@@ -1,21 +1,24 @@
 #wrap {
-    width: 1200px;
+    min-width: 1260px;
     margin: auto;
 }
 
 .week {
     margin: auto;
-    width: 800px;
+    width: 1100px;
 }
 
 .day {
-    padding: 20px 0;
+    padding: 30px 0;
+    border-bottom: 1px solid #ddd;
 }
 
 .date {
     font-size: 40px;
     font-weight: bold;
     margin-bottom: 15px;
+    text-align: center;
+    color: orange;
 }
 
 .menu-div {
