spring boot set

--- a/src/main/resources/templates/communityPage.html
+++ b/src/main/resources/templates/communityPage.html
@@ -37,7 +37,7 @@
                 <div class="comment">
                     <ul class="list_comment">
                         <li class="comm">댓글</li>
-                        <li id="_cmt-718843-60" class="comm" data-seq="60" data-parseq="0" data-is-hidden="false" data-nickname="2021취뽀" data-image-url="" data-image-name="" data-image-size="0"  data-is-emoticon="false"">
+                        <li id="_cmt-718843-60" class="comm" data-seq="60" data-parseq="0" data-is-hidden="false" data-nickname="2021취뽀" data-image-url="" data-image-name="" data-image-size="0"  data-is-emoticon="false">
                             <div class="comment_section">
                                 <div class="profile_thumb">
                                     <img src="//img1.daumcdn.net/thumb/C72x72/?fname=http://i1.daumcdn.net/cafeimg/img_profile/profile_kero.png" alt="" width="36" height="36" class="img_thumb">
