--- a/src/main/resources/templates/planMeals.html
+++ b/src/main/resources/templates/planMeals.html
@@ -41,7 +41,7 @@
 					<div class="meals-area__cont">
 						<h3 class="meals-area__cont__title "><span>식단관리 기간을 선택하세요.</span></h3>
 
-						<div class="box clearfix">
+						<ul class="box clearfix">
 							<li class="box__list hd__custom-label experiencePack" style="">
 								<input type="radio" class="hidden" name="week" id="experience" value="1" data-checked="n">
 								<label for="experience">체험팩</label>
